# glest-data

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  MODS.md  README.md  SCENARIOS.md  TILESETS.md  blender_5_1_g3d_plugin.py  blender_g3d_plugin.py  blender_script_to_bake.py  remove-duplicate-strings-in-techs.sh  zetaglest-data-cmake.geany
data/: defaultGameSetup.mgg  defaultGameSetup.sav  defaultMagitechNetworkGameSetup.mgg  defaultMagitechNetworkGameSetup.sav  defaultNetworkGameSetup.mgg  defaultNetworkGameSetup.sav
data/core/menu/: menu.xml
data/lang/: albanian.lng  arabic.lng  chinese-china.lng  chinese-taiwan.lng  czech.lng  danish.lng  dutch.lng  english.lng  french.lng  gaelic.lng  german.lng  greek.lng  hebrew.lng  indonesian.lng  irish.lng  italian.lng  japanese.lng  lithuanian.lng  nko.lng  polish.lng  portuguese-brazil.lng  portuguese.lng  romanian.lng  russian.lng  slovenian.lng  spanish.lng  turkish.lng  uzbek.lng  vietnamese.lng
docs/: AUTHORS.data.txt
maps/: 3musketeer.mgm  Athena's_Valley.mgm  Autobahn.gbm  Badwater.gbm  Bulwarks.gbm  Cascade.gbm  China Grove.gbm  Clover.gbm  Deliver.mgm  Doodleville.mgm  Evercamp.gbm  Great Wall.gbm  Misty Hills.gbm  Rio Bravo.gbm  Riptide.mgm  Yukon Rush.gbm  beta_grand canyon.gbm  burnt_earth.mgm  caution_landscape.mgm  cliff_way.mgm  conflict.mgm  control_points.zgm  desert_river.mgm  fatal_shore.mgm  forest_highland.mgm  forest_lands.mgm  gold_war.mgm  golden_spots.mgm  hill_in_the_front.zgm  land_of_fear.gbm  last_refuge.mgm  link_large.mgm  link_small.mgm  long_way_ahead.mgm  lost_river.mgm  marsh_fortress.gbm  mountain_pass.mgm  mountain_pass.zgm  natural_fortress.mgm  newland.mgm  (+13 more)
others/: glest-long-description.txt.in  zetaglest-long-description.txt.in
others/appdata/: estimate-the-translations.sh  glest.appdata.xml  glest_editor.appdata.xml  io.glest.Editor.appdata.xml  zetaglest.appdata.xml  zetaglest_editor.appdata.xml
others/desktop/: glest_g3dviewer.desktop  io.glest.Editor.desktop  io.glest.Glest.desktop  zetaglest.desktop  zetaglest_editor.desktop  zetaglest_g3dviewer.desktop
others/icons/: glest.xpm  zetaglest.xpm
others/menu/: glest.menu.in  glest_editor.menu.in  zetaglest.menu.in  zetaglest_editor.menu.in
scenarios/amazones/: amazones.xml  amazones_dutch.lng
scenarios/amazones_light/: amazones_light.xml
scenarios/amazones_pro/: amazones_pro.xml  amazones_pro_english.lng
scenarios/anarchy/: anarchy.xml
scenarios/beehive_castle/: beehive_castle.xml
scenarios/beginner_1/: beginner_1.xml
scenarios/beginner_2/: beginner_2.xml
scenarios/beginner_3/: beginner_3.xml
scenarios/benchmark/: benchmark.xml  benchmark_english.lng
scenarios/capture_enemy_flag/: capture_enemy_flag.xml
scenarios/death_road/: Death_Road.mgm  death_road.xml  death_road_english.lng  death_road_japanese.lng
scenarios/duel/: duel.xml
scenarios/egypt_mayhem/: egypt_mayhem.xml
scenarios/indian_attack/: indian_attack.xml
scenarios/kill_the_magic/: kill_the_magic.xml
scenarios/magic_can_do_it/: magic_can_do_it.xml
scenarios/my_island/: my_island.xml
scenarios/native_unrest/: Native_Unrest.mgm  native_unrest.xml  native_unrest_english.lng
scenarios/natives_attack/: natives_attack.xml
scenarios/norsemen_attack/: norsemen_attack.xml
scenarios/one_hope/: one_hope.xml
scenarios/siege_of_despair/: siege_of_despair.xml
scenarios/storming/: storming.xml
scenarios/tech_and_magic/: tech_and_magic.xml
scenarios/tough_duel/: tough_duel.xml
scenarios/warlock_overlords/: Warlock_Overlords.mgm  warlock_overlords.xml  warlock_overlords_english.lng  warlock_overlords_japanese.lng
scenarios/waterworld/: waterworld.xml
scenarios/witches_hunt/: Witches_Hunt.mgm  witches_hunt.xml  witches_hunt_english.lng  witches_hunt_japanese.lng
techs/alternate-realities/: alternate-realities.xml
techs/ancient/: ancient.xml
techs/colonial/: colonial.xml
techs/factionpack/: factionpack.xml
techs/fantasy/: fantasy.xml
techs/glestpack/: glestpack.xml
techs/megapack/: megapack.xml
techs/mixpack/: mixpack.xml
tilesets/autumn/: autumn.xml
tilesets/birch_forest/: birch_forest.xml
tilesets/christmas/: christmas.xml
tilesets/dark_forest/: dark_forest.xml
tilesets/desert2/: desert2.xml
tilesets/desert4/: desert4.xml
tilesets/evergreen/: evergreen.xml
tilesets/fernland/: fernland.xml
tilesets/forest/: forest.xml
tilesets/freek_forest/: freek_forest.xml  leaf.tga  rock.tga  rock_moss.tga  shrub.tga  small_rock.g3d  trunk.tga
tilesets/frost_peak/: frost_peak.xml  glow_particles.xml  rune_particles.xml
tilesets/imladris/: imladris.xml
tilesets/jungle/: jungle.xml
tilesets/karningul/: karningul.xml
tilesets/lava_land/: lava_land.xml  readme.txt
tilesets/lego_land/: lego_land.xml
tilesets/meadow/: meadow.xml
tilesets/mediterran/: mediterran.xml
tilesets/moon/: moon.xml
tilesets/peat_bog/: peat_bog.xml
tilesets/pine_peat/: pine_peat.xml
tilesets/pine_rock/: pine_rock.xml
tilesets/pine_woods/: pine_woods.xml
tilesets/scrub_land/: scrub_land.xml
tilesets/spring/: spring.xml
tilesets/swamp/: swamp.xml
tilesets/volcanic_island/: readme.txt  volcanic_island.xml
tilesets/winter/: winter.xml
tilesets/winter_forest/: winter_forest.xml
tutorials/1_very_basic_tutorial/: 1_very_basic_tutorial.xml  1_very_basic_tutorial_albanian.lng  1_very_basic_tutorial_arabic.lng  1_very_basic_tutorial_chinese-china.lng  1_very_basic_tutorial_chinese-taiwan.lng  1_very_basic_tutorial_czech.lng  1_very_basic_tutorial_danish.lng  1_very_basic_tutorial_dutch.lng  1_very_basic_tutorial_english.lng  1_very_basic_tutorial_french.lng  1_very_basic_tutorial_gaelic.lng  1_very_basic_tutorial_german.lng  1_very_basic_tutorial_greek.lng  1_very_basic_tutorial_hebrew.lng  1_very_basic_tutorial_indonesian.lng  1_very_basic_tutorial_irish.lng  1_very_basic_tutorial_italian.lng  1_very_basic_tutorial_nko.lng  1_very_basic_tutorial_polish.lng  1_very_basic_tutorial_portuguese-brazil.lng  1_very_basic_tutorial_portuguese.lng  1_very_basic_tutorial_romanian.lng  (+3 more)
(+2578 files in other folders)
